# squad79-tgbot

./: CMakeLists.txt  magic.hpp  main.cpp  main.hpp  singletone.hpp
basic_templates_db_min_ai/: mini_ai_db.txt  synonyms.txt
bot/: core.cpp  core.hpp  core_structs.h  event_processing.cpp  event_processing.h
bot/commands/: about.hpp  admins.hpp  command.hpp  commandHandlers.hpp  debug.hpp  init.hpp  inlinehelp.h  inoagent.h  permissions.hpp  start.hpp
bot/mini_ai/: answer_database.cpp  answer_database.h  helper.h  text_processing.cpp  text_processing.h
database/: dbcontroller.hpp  help.txt  sqlite_wrapper.hpp
utils/: escapeMarkdownV2.cpp  escapeMarkdownV2.hpp  jaro_winkler.cpp  jaro_winkler.h  logger.cpp  logger.hpp  memory.hpp  my_thread.cpp  my_thread.h  original_jaro_winkler.cpp  original_jaro_winkler.h
utils/nonstd/: span.hpp  string_view.hpp
